[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/fun.png" type="Texture" id=2]
[ext_resource path="res://Menu/speed.png" type="Texture" id=3]
[ext_resource path="res://Menu/hard.png" type="Texture" id=4]
[ext_resource path="res://Menu/taust.png" type="Texture" id=5]
[ext_resource path="res://Menu/quit.png" type="Texture" id=6]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 757.0
margin_top = 328.0
margin_right = 1163.0
margin_bottom = 752.0

[node name="Fun" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 406.0
margin_bottom = 103.0
texture_normal = ExtResource( 2 )

[node name="Speed" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 406.0
margin_bottom = 210.0
texture_normal = ExtResource( 3 )

[node name="Hard" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 406.0
margin_bottom = 317.0
texture_normal = ExtResource( 4 )

[node name="Quit" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 406.0
margin_bottom = 424.0
texture_normal = ExtResource( 6 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Fun" to="." method="_on_Fun_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Speed" to="." method="_on_Speed_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
